Update deprecated URL(String) to use URI constructors